<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/md_theme_light_background">

    <!-- Title -->
    <TextView
        android:id="@+id/titleGuestForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_guest_form"
        android:textColor="@color/md_theme_dark_primaryContainer"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <!-- Full Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_full_name"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/md_theme_dark_primaryContainer"
        app:hintTextColor="@color/md_theme_dark_primaryContainer"
        app:layout_constraintTop_toBottomOf="@id/titleGuestForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:textColor="@color/md_theme_dark_onPrimaryContainer"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/md_theme_dark_primaryContainer"
        app:hintTextColor="@color/md_theme_dark_primaryContainer"
        app:layout_constraintTop_toBottomOf="@id/layoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="?attr/editTextBackground"
            android:textColor="@color/md_theme_dark_onPrimaryContainer"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone Number -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/md_theme_dark_primaryContainer"
        app:hintTextColor="@color/md_theme_dark_primaryContainer"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:background="?attr/editTextBackground"
            android:textColor="@color/md_theme_dark_onPrimaryContainer"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Gender -->
    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_gender"
        android:textColor="@color/md_theme_dark_primaryContainer"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPhone" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            android:layout_marginStart="15dp"/>
    </RadioGroup>

    <!-- Guest Type -->
    <TextView
        android:id="@+id/tvGuestType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_guest_type"
        android:textColor="@color/md_theme_dark_primaryContainer"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/rgGender"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/rgGuestType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvGuestType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbUtarStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utar_student"/>

        <RadioButton
            android:id="@+id/rbPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_guest"
            android:layout_marginStart="15dp"/>
    </RadioGroup>

    <!-- Preferences -->
    <TextView
        android:id="@+id/tvPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_preferences"
        android:textColor="@color/md_theme_dark_primaryContainer"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/rgGuestType"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"/>

    <GridLayout
        android:id="@+id/layoutPreferences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvPreferences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Row 1 -->
        <CheckBox
            android:id="@+id/cbMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_music_concert"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <CheckBox
            android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_sports_competition"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <CheckBox
            android:id="@+id/cbVolunteering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_volunteering"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <!-- Row 2 -->
        <CheckBox
            android:id="@+id/cbWorkshops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_workshops"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <CheckBox
            android:id="@+id/cbExhibition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_exhibition"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <CheckBox
            android:id="@+id/cbSeminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_seminar"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <!-- Row 3 -->
        <CheckBox
            android:id="@+id/cbNetworking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_networking"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <CheckBox
            android:id="@+id/cbCulturalFest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_cultural_fest"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

        <CheckBox
            android:id="@+id/cbTechTalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_talk"
            android:textColor="@color/md_theme_dark_primaryContainer"/>

    </GridLayout>

    <!-- Opt-in for Notifications -->
    <CheckBox
        android:id="@+id/cbNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_updates"
        app:layout_constraintTop_toBottomOf="@id/layoutPreferences"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/btnSubmitGuest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:backgroundTint="@color/md_theme_dark_primaryContainer"
        android:textColor="@color/md_theme_light_onPrimary"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cbNotifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
